Fix collection list overlap with one item (#1222)

--- a/assets/section-collection-list.css
+++ b/assets/section-collection-list.css
@@ -34,10 +34,6 @@
   width: 100%;
 }
 
-.collection-list__item:only-child .media {
-  height: 35rem;
-}
-
 @media screen and (max-width: 749px) {
   .collection-list .collection-list__item {
     width: calc(100% - 3rem);
@@ -58,14 +54,6 @@
 }
 
 @media screen and (min-width: 750px) {
-  .collection-list__item:only-child > *:not(.card--media) {
-    height: 320px;
-  }
-
-  .collection-list__item:only-child .media {
-    height: 47rem;
-  }
-
   .collection-list__item a:hover {
     box-shadow: none;
   }
